# Sales-Assistant

./: .gitignore  CLAUDE.md  NEW_APP_CONTEXT_PROMPT.md  README.md  pyproject.toml
app/: __init__.py  __main__.py  app_paths.py  main.py
app/ai/: __init__.py  base.py  factory.py  openai_provider.py  token_estimator.py
app/config/: __init__.py  models.py  store.py
app/data/: __init__.py  db.py  loaders.py  queries.py
app/notifications/: __init__.py  email_client.py
app/notifications/templates/: .gitkeep
app/scheduler/: __init__.py  runner.py
app/services/: __init__.py  budget_service.py  fiscal_calendar.py  insights.py  manager_analytics.py  marketing_programs.py  rep_metrics.py  singleflight.py
app/storage/: __init__.py  db.py  invoice_cache.py  repos.py  sales_cache.py  schema.py
app/ui/: main_window.py  theme.py
app/ui/dialogs/: __init__.py  ai_settings_dialog.py  db_settings_dialog.py  email_settings_dialog.py
app/ui/views/: _header.py  ai_chat_view.py  budget_view.py  cc_mapping_view.py  conversations_view.py  core_displays_view.py  dashboard_view.py  fiscal_calendar_view.py  help_view.py  marketing_programs_view.py  reps_view.py  sales_by_cc_view.py  sales_by_rep_view.py  settings_view.py  weekly_email_view.py
app/ui/widgets/: cards.py  cc_selector.py  global_filters_card.py  pandas_model.py  sales_filter_bar.py  sidebar.py  status_bar.py
tests/: test_account_resolution.py  test_account_successor.py  test_manager_analytics.py  test_marketing_programs.py  test_rep_facts.py  test_smoke.py  test_weekly_email_helpers.py
