[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-assistant"
version = "0.1.0"
description = "AI-powered sales-management desktop assistant for NRF (Windows native, PySide6)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lukas" }]
license = { text = "Proprietary" }

dependencies = [
    # UI
    "PySide6>=6.7,<6.9",

    # Data layer (SQL Server warehouse)
    "SQLAlchemy>=2.0,<2.1",
    "pyodbc>=5.1",
    "pandas>=2.2",

    # Config + validation
    "pydantic>=2.6,<3",

    # Secrets (Windows Credential Manager)
    "keyring>=25.0",

    # AI provider HTTP client
    "httpx>=0.27",

    # Email templating
    "Jinja2>=3.1",

    # Scheduling
    "APScheduler>=3.10",

    # Date utilities
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.4",
    "pyinstaller>=6.6",
]

[project.scripts]
sales-assistant = "app.main:main"

[project.gui-scripts]
"Sales Assistant" = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.notifications" = ["templates/*.j2", "templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
